<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_menu_item_home" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book"
            android:title="@string/nav_menu_item_books" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_cloud"
            android:title="@string/nav_menu_item_weather" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_menu_item_sign_out" />
    </group>
</menu>