<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_single">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_quadruple">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_page_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_quadruple"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_username_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username_hint"
                    android:maxLength="@integer/username_max_length"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_sextuple"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/password_max_length"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_septuple"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_sixteen"
                android:textStyle="bold"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/loading_spinner" />
</FrameLayout>
